--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,6 +14,7 @@
     "better-react-carousel": "^1.1.1",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
     "react-multi-carousel": "^2.8.2",
